--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="/angular-ngrx/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>*{box-sizing:border-box}html{font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}body{margin:0;color:#dedede;background-color:#333}</style><link rel="stylesheet" href="styles.d61104f730d84ae5.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.d61104f730d84ae5.css"></noscript></head>
+<style>*{box-sizing:border-box}html{font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}body{margin:0;color:#dedede;background-image:linear-gradient(120deg,#fdfbfb 0%,#ebedee 100%)}</style><link rel="stylesheet" href="styles.4131cb2afcd1c0b7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.4131cb2afcd1c0b7.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.2e13327006441671.js" type="module"></script><script src="polyfills.e7a84fbfb6a9ac7a.js" type="module"></script><script src="main.7c4d659790366263.js" type="module"></script>
+<script src="runtime.2e13327006441671.js" type="module"></script><script src="polyfills.e7a84fbfb6a9ac7a.js" type="module"></script><script src="main.7a0bad92cac93d9b.js" type="module"></script>
 
 </body></html>
